// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addComponent should add the component to the end of the App.tsx return statement 1`] = `
"import React from 'react'
import logo from './logo.svg'
import './App.scss'

function App() {
  return (
    <div className=\\"App\\">
      <header className=\\"App-header\\">
        <img src={logo} className=\\"App-logo\\" alt=\\"logo\\" />
        <SomeComponent />
        <p>
          Edit <code>src/App.tsx</code> and save to reload.
        </p>
        <span>
          <span>Learn </span>
          <a
            className=\\"App-link\\"
            href=\\"https://reactjs.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            React
          </a>
          <span>, </span>
          <a
            className=\\"App-link\\"
            href=\\"https://redux.js.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            Redux
          </a>
          <span>, </span>
          <a
            className=\\"App-link\\"
            href=\\"https://redux-toolkit.js.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            Redux Toolkit
          </a>
          ,<span> and </span>
          <a
            className=\\"App-link\\"
            href=\\"https://react-redux.js.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            React Redux
          </a>
        </span>
      </header>
    </div>
  )
}

export default App
"
`;

exports[`addComponent should add the component to the end of the App.tsx return statement 2`] = `
"import React from 'react'
import logo from './logo.svg'
import './App.scss'

function App() {
  return (
    <div className=\\"App\\">
      <header className=\\"App-header\\">
        <img src={logo} className=\\"App-logo\\" alt=\\"logo\\" />
        <PreExistingComponent />
        <AnotherComponent />
        <NewComponent />
        <p>
          Edit <code>src/App.tsx</code> and save to reload.
        </p>
        <span>
          <span>Learn </span>
          <a
            className=\\"App-link\\"
            href=\\"https://reactjs.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            React
          </a>
          <span>, </span>
          <a
            className=\\"App-link\\"
            href=\\"https://redux.js.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            Redux
          </a>
          <span>, </span>
          <a
            className=\\"App-link\\"
            href=\\"https://redux-toolkit.js.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            Redux Toolkit
          </a>
          ,<span> and </span>
          <a
            className=\\"App-link\\"
            href=\\"https://react-redux.js.org/\\"
            target=\\"_blank\\"
            rel=\\"noopener noreferrer\\"
          >
            React Redux
          </a>
        </span>
      </header>
    </div>
  )
}

export default App
"
`;

exports[`surroundAppWithComponentWithoutImport should accept a component with extra props 1`] = `
"import React from 'react'
import ReactDOM from 'react-dom'
import './index.css'
import App from './App'
import reportWebVitals from './reportWebVitals'

ReactDOM.render(
  <React.StrictMode>
    <Provider store={store}>
      <App />
    </Provider>
  </React.StrictMode>,
  document.getElementById('root'),
)

// If you want to start measuring performance in your app, pass a function
// to log results (for example: reportWebVitals(console.log))
// or send to an analytics endpoint. Learn more: https://bit.ly/CRA-vitals
reportWebVitals()
"
`;

exports[`surroundAppWithComponentWithoutImport should surround the <App /> component with the given provider tag in the index.tsx 1`] = `
"import React from 'react'
import ReactDOM from 'react-dom'
import './index.css'
import App from './App'
import reportWebVitals from './reportWebVitals'

ReactDOM.render(
  <React.StrictMode>
    <Switch>
      <App />
    </Switch>
  </React.StrictMode>,
  document.getElementById('root'),
)

// If you want to start measuring performance in your app, pass a function
// to log results (for example: reportWebVitals(console.log))
// or send to an analytics endpoint. Learn more: https://bit.ly/CRA-vitals
reportWebVitals()
"
`;
